--- a/style.scss
+++ b/style.scss
@@ -1,125 +1,248 @@
-.main{
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.main {
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.location-icon{
+
+.location-icon {
     height: 22px;
     width: 22px;
 }
+
 .separator {
     height: 80px;
-    width: 4px;
+    width: 2px;
     background-color: rgb(255, 255, 255);
     border-radius: 100%;
 }
+
 .weather-details {
     height: 180px;
-    width: 740px;
+    width: 800px;
     border-radius: 10px;
-    padding-top: 5px;
-    padding-left: 60px;
-    position: relative; //position relative
-    .sunny-text,.night-text,.rainy-text {
-        color: white;
-        font-size: 25px;
+    padding-top: 20px;
+    padding-left: 30px;
+    position: relative;
+
+    .weather-text,
+    .temprature,
+    .day-date,
+    .city-name,
+    .weather-image {
+        display: none;
     }
+
+    .weather-text {
+        color: white;
+        font-size: 20px;
+    }
+
     .weather-content {
-        height: 100px;
-        .sunny-temp, .night-temp, .rainy-temp {
+        .temprature {
             color: white;
             font-size: 80px;
         }
+
         display: flex;
         align-items: center;
-        gap: 20px;
+        gap: 15px;
 
         .day-location {
             display: flex;
             flex-direction: column;
             justify-content: center;
-            .mon-tues-sun {
-                margin-bottom: -40px;
-            }
-            .sunny-day, .night-day, .rainy-day {
+            gap: 15px;
+
+            .day-date {
                 color: white;
-                font-size: 25px;
+                font-size: 16px;
             }
+
             .location {
                 display: flex;
                 align-items: center;
                 gap: 5px;
 
-                .fransisco, .paris, .london {
+                .city-name {
                     color: white;
-                    font-size: 25px;
+                    font-size: 16px;
                 }
             }
         }
     }
+
     overflow: hidden;
-    .sunny-image, .night-image, .rainy-image {
+
+    .weather-image {
         position: absolute;
-        height: 200px;
-        width: 200px;
-        right: -24px;
-        top: -26px;
+        right: 0px;
+        top: 0px;
+
+        .weather-inner {
+            position: relative;
+        }
     }
 }
-.weather-sunny{
-    .night-text, .rainy-text {
-        display: none;
+
+//////////////////////////////////WEATHER SUNNY/////////////////////////////
+.weather-sunny {
+
+    .sunny-text,
+    .sunny-temp,
+    .sunny-day,
+    .fransisco,
+    .sunny-image {
+        display: block;
     }
-    .night-temp, .rainy-temp {
-        display: none;
+
+    background: linear-gradient(to right, rgb(28, 147, 253), rgb(62, 166, 255), rgb(94, 186, 255));
+
+    .sunny-inner {
+        .sun {
+            position: absolute;
+            height: 180px;
+            width: 180px;
+            background: linear-gradient(to bottom, rgb(254, 255, 178), rgb(254, 237, 139), rgb(252, 204, 67));
+            border-radius: 50%;
+            right: -38px;
+            top: -39px;
+            z-index: 3;
+        }
+
+        .sun-shine-light {
+            position: absolute;
+            height: 250px;
+            width: 250px;
+            background: rgb(162, 218, 254);
+            border-radius: 50%;
+            right: -60px;
+            top: -65px;
+            z-index: 2;
+        }
+
+        .sun-shine-lighter {
+            position: absolute;
+            height: 320px;
+            width: 320px;
+            background: rgb(127, 201, 255);
+            border-radius: 50%;
+            right: -78px;
+            top: -91px;
+            z-index: 1;
+        }
     }
-    .night-day, .rainy-day {
-        display: none;
-    }
-    .paris, .london {
-        display: none;
-    }
-    .night-image, .rainy-image{
-        display: none;
-    }
-    background: rgb(46,159,255);
 }
-//////////////////////////////////////////////////////////////
-.weather-night{
-    .sunny-text, .rainy-text {
-        display: none;
+
+///////////////////////////////WEATHER NIGHT///////////////////////////////
+.weather-night {
+
+    .night-text,
+    .night-temp,
+    .night-day,
+    .paris,
+    .night-image {
+        display: block;
     }
-    .sunny-temp, .rainy-temp {
-        display: none;
+
+    background: linear-gradient(to right, rgb(45, 98, 247), rgb(95, 109, 236), rgb(175, 127, 219));
+
+    .night-inner {
+        .cloud-image {
+            height: 200px;
+            width: 200px;
+        }
+
+        .moon {
+            position: absolute;
+            height: 100px;
+            width: 100px;
+            top: 10px;
+            right: -10px;
+        }
+
+        .big-cloud {
+            position: absolute;
+            height: 30px;
+            width: 30px;
+            border-radius: 50%;
+            background: rgba(208, 200, 242, 0.8);
+            left: -100px;
+            top: 25px;
+            box-shadow: 0 0 10px white;
+        }
+
+        .small-cloud {
+            position: absolute;
+            height: 20px;
+            width: 20px;
+            border-radius: 50%;
+            background: rgba(208, 200, 242, 0.6);
+            left: -30px;
+            top: 50px;
+            box-shadow: 0 0 10px white;
+        }
+
+        .smaller-cloud {
+            position: absolute;
+            height: 15px;
+            width: 15px;
+            border-radius: 50%;
+            background: rgba(208, 200, 242, 0.6);
+            left: -120px;
+            top: 130px;
+            box-shadow: 0 0 10px white;
+        }
+
+        .smallest-cloud {
+            position: absolute;
+            height: 10px;
+            width: 10px;
+            border-radius: 50%;
+            background: rgba(208, 200, 242, 0.6);
+            left: -80px;
+            top: 95px;
+            box-shadow: 0 0 10px white;
+        }
     }
-    .sunny-day, .rainy-day {
-        display: none;
-    }
-    .fransisco, .london {
-        display: none;
-    }
-    .sunny-image, .rainy-image{
-        display: none;
-    }
-    background: rgb(46,159,255);
 }
-/////////////////////////////////////////////////////////////////////
-.weather-rainy{
-    .night-text, .sunny-text {
-        display: none;
+
+///////////////////////////////////////WEATHER RAINY//////////////////////////////
+.weather-rainy {
+
+    .rainy-text,
+    .rainy-temp,
+    .rainy-day,
+    .london,
+    .rainy-image {
+        display: block;
     }
-    .night-temp, .sunny-temp {
-        display: none;
+
+    background: linear-gradient(to right, rgb(0, 191, 166), rgb(47, 211, 164), rgb(97, 236, 163));
+
+    .rainy-image {
+        top: -65px;
     }
-    .night-day, .sunny-day {
-        display: none;
+
+    .rainy-inner {
+        .cloud-image {
+            height: 200px;
+            width: 200px;
+        }
+
+        .thunder {
+            position: absolute;
+            height: 100px;
+            width: 100px;
+            top: 130px;
+            right: 40px;
+        }
     }
-    .paris, .fransisco {
-        display: none;
-    }
-    .night-image, .sunny-image{
-        display: none;
-    }
-    background: linear-gradient(to right, rgb(46,159,255), rgb(94,185,255)) ;
 }
