--- a/style.css
+++ b/style.css
@@ -144,45 +144,68 @@
   right: -10px;
   transform: rotate(-30deg);
 }
-.weather-night .night-inner .big-cloud {
+.weather-night .night-inner .small-clouds {
   position: absolute;
-  height: 30px;
-  width: 30px;
-  border-radius: 50%;
-  background: rgba(208, 200, 242, 0.8);
-  left: -100px;
+  transform: rotate(45deg);
+}
+.weather-night .night-inner .small-clouds > span {
+  display: inline-block;
+}
+.weather-night .night-inner .small-clouds-v1 {
+  height: 120px;
+  width: 10px;
+  left: -70px;
   top: 25px;
-  box-shadow: 0 0 10px white;
 }
-.weather-night .night-inner .small-cloud {
-  position: absolute;
-  height: 20px;
-  width: 20px;
-  border-radius: 50%;
-  background: rgba(208, 200, 242, 0.6);
-  left: -30px;
-  top: 50px;
-  box-shadow: 0 0 10px white;
-}
-.weather-night .night-inner .smaller-cloud {
-  position: absolute;
-  height: 15px;
-  width: 15px;
-  border-radius: 50%;
-  background: rgba(208, 200, 242, 0.6);
-  left: -120px;
-  top: 130px;
-  box-shadow: 0 0 10px white;
-}
-.weather-night .night-inner .smallest-cloud {
-  position: absolute;
+.weather-night .night-inner .small-clouds-v1 > span {
+  margin: 15px;
   height: 10px;
   width: 10px;
   border-radius: 50%;
-  background: rgba(208, 200, 242, 0.6);
-  left: -80px;
-  top: 95px;
-  box-shadow: 0 0 10px white;
+  background-color: rgb(162, 147, 229);
+}
+.weather-night .night-inner .small-clouds-v1 > span:nth-child(2) {
+  height: 6px;
+  width: 6px;
+}
+.weather-night .night-inner .small-clouds-v2 {
+  height: 180px;
+  width: 10px;
+  left: -135px;
+  top: -3px;
+  transform: rotate(40deg);
+}
+.weather-night .night-inner .small-clouds-v2 > span {
+  margin: 20px;
+  height: 15px;
+  width: 15px;
+  border-radius: 50%;
+  background-color: rgb(162, 147, 229);
+}
+.weather-night .night-inner .small-clouds-v2 > span:last-child {
+  height: 6px;
+  width: 6px;
+}
+.weather-night .night-inner .small-clouds-v3 {
+  height: 180px;
+  width: 10px;
+  left: -25px;
+  top: -3px;
+  transform: rotate(40deg);
+}
+.weather-night .night-inner .small-clouds-v3 > span {
+  margin: 20px;
+  height: 5px;
+  width: 5px;
+  border-radius: 50%;
+  background-color: rgb(162, 147, 229);
+}
+.weather-night .night-inner .small-clouds-v3 > span:first-child {
+  margin-bottom: 60px;
+}
+.weather-night .night-inner .small-clouds-v3 > span:nth-child(2) {
+  height: 3px;
+  width: 3px;
 }
 
 .weather-rainy {
@@ -209,15 +232,19 @@
   top: 152px;
   right: 60px;
 }
-.weather-rainy .rainy-inner .rain-drops-v1 {
+.weather-rainy .rainy-inner .rain-drops {
   position: absolute;
   transform: rotate(20deg);
+}
+.weather-rainy .rainy-inner .rain-drops > span {
+  display: inline-block;
+}
+.weather-rainy .rainy-inner .rain-drops-v1 {
   width: 50px;
   bottom: -41px;
   right: 20px;
 }
 .weather-rainy .rainy-inner .rain-drops-v1 > span {
-  display: inline-block;
   margin: 3px 8px;
   height: 20px;
   width: 6px;
@@ -225,17 +252,41 @@
   background: linear-gradient(to top, rgb(255, 255, 255), rgb(174, 245, 207));
 }
 .weather-rainy .rainy-inner .rain-drops-v2 {
-  position: absolute;
-  transform: rotate(20deg);
   width: 50px;
   bottom: -41px;
   right: 150px;
 }
 .weather-rainy .rainy-inner .rain-drops-v2 > span {
-  display: inline-block;
   margin: 3px 8px;
   height: 20px;
   width: 6px;
   border-radius: 80% 80% 40% 40%;
   background: linear-gradient(to top, rgb(252, 252, 252), rgb(174, 245, 207));
+}
+.weather-rainy .rainy-inner .rain-drops-v3 {
+  width: 140px;
+  bottom: -32px;
+  right: 206px;
+}
+.weather-rainy .rainy-inner .rain-drops-v3 > span {
+  margin: 10px 30px;
+  height: 25px;
+  width: 6px;
+  border-radius: 80% 80% 30% 30%;
+  background: linear-gradient(to top, rgba(255, 255, 255, 0.5), rgba(174, 245, 207, 0.5));
+}
+.weather-rainy .rainy-inner .rain-drops-v4 {
+  width: 150px;
+  bottom: -40px;
+  right: 224px;
+}
+.weather-rainy .rainy-inner .rain-drops-v4 > span {
+  margin: 10px 30px;
+  height: 30px;
+  width: 6px;
+  border-radius: 80% 80% 30% 30%;
+  background: linear-gradient(to top, rgba(255, 255, 255, 0.5), rgba(174, 245, 207, 0.5));
+}
+.weather-rainy .rainy-inner .rain-drops-v4 > span:nth-child(5) {
+  visibility: hidden;
 }/*# sourceMappingURL=style.css.map */
